# forge

./: .gitignore  AGENTS.md  README.md  create-forge-scaffold.sh  docker-compose.yml
apps/: README.md
apps/evals-dashboard/: README.md
apps/forge-dashboard/: README.md
apps/landing-dashboard/: README.md
apps/prompt-dashboard/: README.md
apps/rag-playground/: README.md
core/: README.md
core/api/: README.md  main.py  requirements.txt
core/auth/: README.md
core/db/: README.md
core/deploy/: README.md
core/mcp/: README.md
docs/: README.md
docs/architecture/: README.md  overview.md  repo-rules.md
docs/decisions/: 0001-monorepo-structure.md  0002-ui-package-visual-engine.md  README.md
docs/design/: landing-dashboard-visual-system.md
docs/runbooks/: README.md  deployment.md  local-dev.md  new-project.md
docs/superpowers/plans/: 2026-06-22-forge-ui-visual-engine.md  2026-06-22-new-project.md
experiments/: README.md
infra/: README.md
infra/docker/: README.md  api.Dockerfile  mcp.Dockerfile
infra/nginx/: README.md
infra/scripts/: README.md
mcp/: README.md
mcp/forge-server/: README.md  pyproject.toml
mcp/forge-server/src/forge_mcp/: __init__.py  security.py  server.py  tools.py
projects/: README.md
projects/evals-dashboard/: README.md  project.yaml
projects/landing-dashboard/: README.md  project.yaml
projects/prompt-dashboard/: README.md  project.yaml
projects/rag-playground/: README.md  project.yaml
scripts/: README.md  bootstrap.sh  dev.sh  format.sh  new-project.sh  test.sh
tests/: new_project_test.sh  scaffold_test.sh
(+2 files in other folders)
